--- a/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
+++ b/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
@@ -30,4 +30,5 @@
     <viewmodels:EditDishListVM x:Key="editDishListVM"></viewmodels:EditDishListVM>
     <viewmodels:EditServiceVM x:Key="editServiceVM"></viewmodels:EditServiceVM>
     <viewmodels:CompleteInvoiceVM x:Key="completeInvoiceVM"></viewmodels:CompleteInvoiceVM>
+    <viewmodels:CompleteInvoiceWindowVM x:Key="completeInvoiceWDVM"></viewmodels:CompleteInvoiceWindowVM>
 </ResourceDictionary>
