--- a/WeddingApp/WeddingApp/App.xaml
+++ b/WeddingApp/WeddingApp/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WeddingApp"
-             StartupUri="Views\UserControls\Admin\RoleListUC.xaml">
+             StartupUri="Views\UserControls\Admin\DashBoardUC.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
