--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/ReportChartUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/ReportChartUC.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:WeddingApp.Views.UserControls.Admin" xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:local="clr-namespace:WeddingApp.Views.UserControls.Admin" xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -19,6 +19,12 @@
                         materialDesign:HintAssist.Hint="Chọn tháng"
                         Width="auto"
                         Margin="5 10">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="SelectionChanged">
+                        <i:InvokeCommandAction Command="{Binding selectCommand}"
+                                        CommandParameter="{Binding ElementName=monthComboBox}" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
                 <ComboBoxItem>1</ComboBoxItem>
                 <ComboBoxItem>2</ComboBoxItem>
                 <ComboBoxItem>3</ComboBoxItem>
@@ -124,7 +130,8 @@
         <Grid Grid.Column="1">
             <lvc:CartesianChart Series="{Binding SeriesCollection}"
                                         LegendLocation="Right"
-                                        Margin="30">
+                                        Margin="30"
+                                x:Name="Chart">
                 <lvc:CartesianChart.AxisX>
                     <lvc:Axis Title="Salesman" Labels="{Binding Labels}"></lvc:Axis>
                 </lvc:CartesianChart.AxisX>
