add function add service

--- a/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
+++ b/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
@@ -32,4 +32,5 @@
     <viewmodels:CompleteInvoiceWindowVM x:Key="completeInvoiceWDVM"></viewmodels:CompleteInvoiceWindowVM>
     <viewmodels:AddDishVM x:Key="addDishVM"></viewmodels:AddDishVM>
     <viewmodels:EditDishVM x:Key="editDishVM"></viewmodels:EditDishVM>
+    <viewmodels:AddServiceVM x:Key="addServiceVM"></viewmodels:AddServiceVM>
 </ResourceDictionary>
