--- a/WeddingApp/WeddingApp/Views/UserControls/Admin/ReportChartUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/Admin/ReportChartUC.xaml
@@ -5,7 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:WeddingApp.Views.UserControls.Admin" xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             x:Name="reportChartWD"
+             >
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"></ColumnDefinition>
@@ -58,7 +60,9 @@
                             Margin="0 20 0 0"
                             FontSize="20"
                             Foreground="White"
-                IsEnabled="True" />
+                IsEnabled="True" Click="saveBtn_Click" 
+                 Command="{Binding btnExportCommand}"
+                            CommandParameter="{Binding ElementName=reportChartWD}"/>
 
             <Grid>
                 <Rectangle Height="130" Margin="20" Fill="White" RadiusY="10" RadiusX="10">
@@ -78,7 +82,7 @@
                                                  Width="25" Height="25" />
                     </Border>
                     <TextBlock Foreground="Black" Text="Doanh thu" FontWeight="Bold" HorizontalAlignment="Right" Margin="15" FontSize="24" VerticalAlignment="Top" />
-                    <TextBlock Foreground="Black" Text="{Binding TotalValue, StringFormat=N0}"
+                    <TextBlock Foreground="Black" Text="{Binding TotalValue, StringFormat=N0, Mode=TwoWay}"
                                TextWrapping="Wrap"
                                HorizontalAlignment="Right" VerticalAlignment="Bottom"
                                Margin="10 10 5 15" FontSize="30" />
@@ -97,7 +101,7 @@
                     </Border>
                     <TextBlock Foreground="Black" Text="Số đơn hàng" FontWeight="Bold" HorizontalAlignment="Right" Margin="15" FontSize="24" VerticalAlignment="Top" />
 
-                    <TextBlock Foreground="Black" Text="{Binding TotalReceipt, StringFormat=N0}"
+                    <TextBlock Foreground="Black" Text="{Binding TotalReceipt, StringFormat=N0, Mode=TwoWay}"
                                HorizontalAlignment="Right" VerticalAlignment="Bottom"
                                Margin="20 10" FontSize="40" />
                 </Grid>
@@ -120,22 +124,23 @@
                     </Border>
                     <TextBlock Foreground="Black" Text="Số khách hàng" FontWeight="Bold" HorizontalAlignment="Right" Margin="15 15 5 15" FontSize="24" VerticalAlignment="Top" />
 
-                    <TextBlock Foreground="Black" Text="{Binding TotalCustomer, StringFormat=N0}"
+                    <TextBlock Foreground="Black" Text="{Binding TotalCustomer, StringFormat=N0, Mode=TwoWay}"
                                HorizontalAlignment="Right" VerticalAlignment="Bottom"
                                Margin="10" FontSize="40" />
                 </Grid>
             </Grid>
         </StackPanel>
-        <Grid Grid.Column="1">
+        <Grid Grid.Column="1"
+              x:Name ="grid">
             <lvc:CartesianChart Series="{Binding SeriesCollection}"
                                         LegendLocation="Right"
                                         Margin="30"
                                 x:Name="Chart">
                 <lvc:CartesianChart.AxisX>
-                    <lvc:Axis Title="Salesman" Labels="{Binding Labels}"></lvc:Axis>
+                    <lvc:Axis x:Name="time"   Title="Thời gian" Labels="{Binding Labels,Mode=TwoWay}"></lvc:Axis>
                 </lvc:CartesianChart.AxisX>
                 <lvc:CartesianChart.AxisY>
-                    <lvc:Axis Title="Sold Apps" LabelFormatter="{Binding Formatter}"></lvc:Axis>
+                    <lvc:Axis Title="Doanh Thu" LabelFormatter="{Binding Formatter}"></lvc:Axis>
                 </lvc:CartesianChart.AxisY>
             </lvc:CartesianChart>
             <Rectangle
