fix all bug Menu and service selection and add features to MenuUC

--- a/WeddingApp/WeddingApp/Resources/XAML/Styles.xaml
+++ b/WeddingApp/WeddingApp/Resources/XAML/Styles.xaml
@@ -130,6 +130,9 @@
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Opacity" Value="0.8"></Setter>
             </Trigger>
+            <Trigger Property="IsEnabled" Value="false">
+                <Setter Property="Background" Value="Silver" />
+            </Trigger>
         </Style.Triggers>
     </Style>
 
