--- a/WeddingApp/WeddingApp/Views/UserControls/ServiceSelectionUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/ServiceSelectionUC.xaml
@@ -229,6 +229,7 @@
                                                     HorizontalAlignment="Center"
                                                     VerticalAlignment="Center"
                                                     Visibility="Collapsed"
+                                                    Command="{Binding Source={StaticResource serviceVM}, Path=DeleteCartCommand}"
                                                     CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}" />
                                             </Grid>
                                             <Grid Grid.Column="1" Margin="0 10">
