--- a/WeddingApp/WeddingApp/Views/WeddingDetailWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/WeddingDetailWindow.xaml
@@ -4,8 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WeddingApp.Views"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
-        xmlns:i="http://schemas.microsoft.com/xaml/behaviors" 
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
         mc:Ignorable="d"
         Title="WeddingDetailWindow"
@@ -55,52 +55,52 @@
                                 <ColumnDefinition Width="1*" />
                                 <ColumnDefinition Width="1*" />
                             </Grid.ColumnDefinitions>
-                            
+
                             <StackPanel Grid.Column="0" Background="Transparent">
-                                
+
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Tên chú rễ: " FontSize="15" Margin="5" />
-                                    <TextBlock  FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtGroom"/>
+                                    <TextBlock  FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtGroom" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Tên cô dâu: " FontSize="15" Margin="5" />
-                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtBride"/>
+                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtBride" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Điện thoại:" FontSize="15" Margin="5" />
-                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtPhone"/>
+                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtPhone" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Mã tiệc cưới: " FontSize="15" Margin="5" />
-                                    <TextBlock  FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtWeddingID"/>
+                                    <TextBlock  FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtWeddingID" />
                                 </StackPanel>
                             </StackPanel>
                             <StackPanel Grid.Column="1">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Ngày đãi tiệc: " FontSize="15" Margin="5" />
-                                    <TextBlock  FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtWeddingDate"/>
+                                    <TextBlock  FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtWeddingDate" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Ca: " FontSize="15" Margin="5" />
-                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtShift"/>
+                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtShift" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Sảnh: " FontSize="15" Margin="5" />
-                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtHall"/>
+                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtHall" />
                                 </StackPanel>
                             </StackPanel>
                             <StackPanel Grid.Column="2">
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Tiền đặt cọc: " FontSize="15" Margin="5" />
-                                    <TextBlock  FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtDeposit"/>
+                                    <TextBlock  FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtDeposit" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Số lượng bàn: " FontSize="15" Margin="5" />
-                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtTableAmount"/>
+                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtTableAmount" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Số bàn dự trữ: " FontSize="15" Margin="5" />
-                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtReserve"/>
+                                    <TextBlock  FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtReserve" />
                                 </StackPanel>
                             </StackPanel>
                         </Grid>
@@ -126,8 +126,7 @@
                                     x:Name="listViewTab"
                                     ScrollViewer.VerticalScrollBarVisibility="Disabled"
                                     ScrollViewer.CanContentScroll="False"
-                                    SelectedIndex="0"
-                                    >
+                                    SelectedIndex="0">
                                     <ListView.ItemsPanel>
                                         <ItemsPanelTemplate>
                                             <StackPanel Orientation="Horizontal"></StackPanel>
@@ -179,7 +178,6 @@
                                         </ListViewItem.Template>
                                     </ListViewItem>
                                 </ListView>
-                               
                             </Border>
                             <Grid Grid.Row="1" x:Name="listViewdish">
                             </Grid>
@@ -200,19 +198,19 @@
                             <StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Tổng tiền dịch vụ: " FontSize="15" Margin="5" />
-                                    <TextBlock Text="{Binding Receipt.ID_}" FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtTotalService"/>
+                                    <TextBlock Text="{Binding Receipt.ID_}" FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtTotalService" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Tổng tiền hoá đơn: " FontSize="15" Margin="5" />
-                                    <TextBlock Text="{Binding Receipt.USER.FULLNAME_}" FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtTotal"/>
+                                    <TextBlock Text="{Binding Receipt.USER.FULLNAME_}" FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtTotal" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Tiền đặt cọc:" FontSize="15" Margin="5" />
-                                    <TextBlock Text="{Binding Receipt.DATE_, StringFormat={} {0:dd/MM/yyyy HH:mm}}" FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtDeposit2"/>
+                                    <TextBlock Text="{Binding Receipt.DATE_, StringFormat={} {0:dd/MM/yyyy HH:mm}}" FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtDeposit2" />
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Còn lại:" FontSize="15" Margin="5" />
-                                    <TextBlock Text="{Binding Receipt.DATE_, StringFormat={} {0:dd/MM/yyyy HH:mm}}" FontSize="12" Margin="5" FontWeight="DemiBold" x:Name="txtRemaining"/>
+                                    <TextBlock Text="{Binding Receipt.DATE_, StringFormat={} {0:dd/MM/yyyy HH:mm}}" FontSize="15" Margin="5" FontWeight="DemiBold" x:Name="txtRemaining" />
                                 </StackPanel>
                             </StackPanel>
                         </Grid>
